# interview-prep-agent-public

./: .gitignore  COMMIT_HISTORY.md  README.md  README_CONTEXT.md  docker-compose.yml
backend/: .dockerignore  .env.local  .env.template  .gitignore  Dockerfile  README.md  cloudbuild.yaml  commit_details.txt  cost_calculator_streamlit.py  main.py  pyproject.toml  requirements.txt  scratch.json  scratch.py
backend/app/: connection_manager.py  constants.py  websocket_handler.py
backend/app/agents/: __init__.py  agent_v2.py  agents.py  dispatcher.py  threads.py
backend/app/agents/memory/: factory.py  providers.py  store.py
backend/app/agents/orchestrator/: broker.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: audio_router.py  auth_router.py  payments_router.py  websocket_router.py
backend/app/api/v2/: router.py  websocket_router.py
backend/app/api/v3/: auth_router.py  interview_session_router.py  router.py  storage_router.py  websocket_router.py
backend/app/event_agents/: agent.py  connection_manager.py  event_handlers.py  types.py  websocket_handler.py
backend/app/event_agents/conversations/: __init__.py  tree.py  tree_and_turn.py  turn.py  turn_builder.py  types.py  utils.py
backend/app/event_agents/evaluations/: evaluator_base.py  evaluators.py  manager.py  rating_rubric_evaluator.py  registry.py
backend/app/event_agents/interview/: __init__.py  answer_processor.py  coordinator.py  event_handler.py  factory.py  lifecycle_manager.py  manager.py  notifications.py  question_manager.py  time_manager.py
backend/app/event_agents/interview/event_handlers/: __init__.py  ask_question_event_handler.py  evaluations_generated_event.py  message_received_event_handler.py  perspective_generated.py  websocket_message_event_handler.py
backend/app/event_agents/memory/: __init__.py  base_memory_store.py  config_builder.py  factory.py  json_decoders.py  json_encoders.py  protocols.py  providers.py  store.py  types.py
backend/app/event_agents/memory/stores/: __init__.py  in_memory.py  mongo.py  types.py
backend/app/event_agents/orchestrator/: __init__.py  broker.py  commands.py  events.py  interview_manager.py  thinker.py
backend/app/event_agents/perspectives/: manager.py  perspective_base.py  perspectors.py  registry.py
backend/app/event_agents/questions/: asker.py  generation_strategies.py  manager.py  types.py
backend/app/event_agents/questions/generation_strategies/: base.py  interview.py  service.py
backend/app/event_agents/ranking/: ranker.py
backend/app/event_agents/roles/: manager.py  types.py
backend/app/event_agents/schemas/: mongo_schemas.py
backend/app/intelligence/: artificial.py  reasoning_structure.py
backend/app/router/: auth_router.py
backend/app/services/: env_keys.py  setup_logging.py
backend/app/services/auth/: firebase.py
backend/app/services/database/: get_mongo_dep.py
backend/app/services/llms/: openai_client.py
backend/app/types/: agent_types.py  interview_concept_types.py  websocket_types.py
backend/app/workshop/: products.py
backend/config/: agent.yaml  agent_34fcc370-5f29-49c9-871b-ed3d7f175847.json  agent_v2.yaml  artifacts.yaml  artifacts_v2.yaml  available_interviews.json  game_manager.yaml  memory.json  test_config.json
backend/docs/: architecture.md  scratch.md  thoughts.md  tracing.md  websocket_architecture.md
backend/docs/sample/: datacard.md  eval.md  filled_rubric.md  memory.md  rubric.md  rubric_card.md
backend/logs/: app.jsonl
backend/tests/: test_payments.py
backend/tests/agents/memory/: conftest.py  test_json_decoder.py  test_providers.py
backend/tests/event_agents/: test_conversation_tree.py
backend/tests/event_agents/interview/: test_coordinator.py  test_question_manager.py  test_ranker.py
backend/tests/event_agents/perspectives/: conftest.py  test_base.py
documentation/: mind-map.md
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  cloudbuild.yaml  middleware.ts  next.config.mjs  package-lock.json  package.json  scratch.json  scratch.md  tailwind.config.js  tailwind.config.ts  thoughts.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: AuthButtons.tsx  action.ts  page.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/debug/: page.tsx
frontend/app/home/: layout.tsx  page.tsx
frontend/app/hooks/: useFirebaseAuth.ts  useVoice.ts  useWebsocket.ts
frontend/app/interview/: page.tsx  websocketMessageValidator.ts
frontend/app/interview-new/: globals.css  layout.tsx  page.tsx
frontend/app/lib/: clientLogger.ts  helperFunctions.ts  messageReducer.ts  serverLogger.ts  types.ts
frontend/app/onboarding/: types.ts
frontend/app/simulate-interview/: layout.tsx  page.tsx
frontend/app/test/: page.tsx
frontend/components/: AuthButtons.tsx  icons.tsx
frontend/components/AiGeneratedSection/: ChatInterface.tsx  SimpleChatInterface.tsx  UserInputInterface.tsx  actions.ts
frontend/components/UserGeneratedSection/: FormInputs.tsx  UserGeneratedSection.tsx
frontend/components/interview/: header.tsx  (+7 more)
frontend/context/: ArtefactContext.tsx  ArtifactContext.tsx  AuthContext.tsx  InputContext.tsx  WebsocketContext.tsx
frontend/cors/: storage.json
frontend/handlers/: frameRenderHandler.tsx  websocketMessageHandler.ts  websocketMessageSender.ts
frontend/hooks/: use-voice-recognition.ts  useFirebaseAuth.ts  useVoice.ts  useWebsocket.ts  useWebsocketNew.ts  userWebsocketNew.ts
frontend/infrastructure/: AudioService.tsx  WebsocketConnection.ts
frontend/lib/: types.ts
frontend/public/: changeLog.md
frontend/reducers/: inputReducer.ts  messageFrameReducer.ts
frontend/types/: ScalableWebsocketTypes.ts  WebsocketSendTypes.ts  auth.ts  input.ts  reducerTypes.ts  websocketEvents.ts  websocketInterface.ts  websocketTypes.ts
shell_scripts/: commit_message_concatenate.sh  copy_py_files_to_clipboard.sh  deploy.sh  deploy_cache.sh  gcp_setup.sh  get_git_diff_for_automated_commit_message.sh  mongo_docker.sh  secrets.sh  secrets_setup.sh  update_commit_history.sh  update_readme.sh  verify_secrets.sh
(+91 files in other folders)
